--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ cmake-build-*/
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
 
-# File-based project format
+# File-based project timeformat
 *.iws
 
 # IntelliJ
